--- a/styles.css
+++ b/styles.css
@@ -3,65 +3,49 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: antiquewhite;
 }
-
+/* 
 h2, h1 {
     margin: 0 auto;
     font-size: 40px;
     margin: 10px;
+} */
+
+
+.box {
+    width: 75px;
+    height: 75px;
+    border: 2px solid black;
+    /* box-shadow: 0 0 0 2px; */
+    line-height: 75px;
+    font-size: 50px;
+    cursor: pointer;
+}
+
+.box-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    margin: auto;
+    width: 220px;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-family: "Permanent Marker", cursive;
+    text-align: center;
 }
-
-.column {
-    height: 100%;
-    width: 100%;
-    flex-direction: column;
-}
-
-.wrap {
-    flex-wrap: wrap;
-    height: 425px;
-    width: 450px;
-}
-
-.box {
-    border: 2px solid black;
-    height: 140px;
-    width: 140px;
-    /* background-color: aquamarine; */
-    border-top: none;
-    border-left: none;
-}
-
-/* .box:first-child,
+.box:first-child,
 .box:nth-child(2),
 .box:nth-child(3) {
     border-top: none;
-} */
+} 
 
-/* .box:nth-child(3n+1) {
+.box:nth-child(3n+1) {
     border-left: none;
-} */
-.box:nth-child(3n+3) {
+}
+ .box:nth-child(3n+3) {
     border-right: none;
 }
 .box:last-child,
 .box:nth-child(7),
 .box:nth-child(8) {
     border-bottom: none;
-
-
-#reset-button {
-    text-align: center;
-    border: 1px solid black;
-    margin: 10px;
-    font-size: larger;
-    background-color: aquamarine;
 }
-
-
-
