--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: antiquewhite;
+    background-color: black;
+    -webkit-text-fill-color: aqua;
 }
 /* 
 h2, h1 {
@@ -14,7 +15,7 @@ h2, h1 {
 .box {
     width: 75px;
     height: 75px;
-    border: 2px solid black;
+    border: 2px solid white;
     /* box-shadow: 0 0 0 2px; */
     line-height: 75px;
     font-size: 50px;
@@ -31,6 +32,17 @@ h2, h1 {
 .container {
     font-family: "Permanent Marker", cursive;
     text-align: center;
+}
+
+#reset-button {
+    -webkit-text-fill-color: black;
+    width: 15%;
+    height: 10%;
+    font-size: 25px;
+    border: 2px solid aqua;
+    background-color: black;
+    -webkit-text-fill-color: aqua;
+    cursor: pointer;
 }
 .box:first-child,
 .box:nth-child(2),
